prevent wide avatar from covering the rest of the page

--- a/src/main-scss/user-page.scss
+++ b/src/main-scss/user-page.scss
@@ -59,6 +59,7 @@ body.user {
 #user-avatar {
 	.avatar {
 		max-height: 220px;
+		max-width: 400px;
 	}
 }
 .external-identity {
